GPL/P7A/y.output
Nonterminals useless in grammar

    variable_declaration


Terminals unused in grammar

    "touches"
    "near"
    "error"


Rules useless in grammar

  126 variable_declaration: simple_type "identifier" optional_initializer


Grammar

    0 $accept: program $end

    1 program: declaration_list block_list

    2 declaration_list: declaration_list declaration ";"
    3                 | empty

    4 declaration: simple_type "identifier" optional_initializer
    5            | simple_type "identifier" "[" expression "]"
    6            | object_declaration
    7            | forward_declaration

    8 simple_type: "int"
    9            | "double"
   10            | "string"

   11 optional_initializer: "=" expression
   12                     | empty

   13 $@1: ε

   14 object_declaration: object_type "identifier" $@1 "(" parameter_list_or_empty ")"
   15                   | object_type "identifier" "[" expression "]"

   16 object_type: "triangle"
   17            | "pixmap"
   18            | "circle"
   19            | "rectangle"
   20            | "textbox"

   21 parameter_list_or_empty: parameter_list
   22                        | empty

   23 parameter_list: parameter_list "," parameter
   24               | parameter

   25 parameter: "identifier" "=" expression

   26 forward_declaration: "forward" "animation" "identifier" "(" animation_parameter ")"

   27 block_list: block_list block
   28           | empty

   29 block: initialization_block
   30      | termination_block
   31      | animation_block
   32      | on_block

   33 initialization_block: "initialization" statement_block

   34 termination_block: "termination" statement_block

   35 animation_block: "animation" "identifier" "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

   36 animation_parameter: object_type "identifier"

   37 check_animation_parameter: object_type "identifier"

   38 on_block: "on" keystroke statement_block

   39 keystroke: "space"
   40          | "leftarrow"
   41          | "rightarrow"
   42          | "uparrow"
   43          | "downarrow"
   44          | "leftmouse_down"
   45          | "middlemouse_down"
   46          | "rightmouse_down"
   47          | "leftmouse_up"
   48          | "middlemouse_up"
   49          | "rightmouse_up"
   50          | "mouse_move"
   51          | "mouse_drag"
   52          | "f1"
   53          | "akey"
   54          | "skey"
   55          | "dkey"
   56          | "fkey"
   57          | "hkey"
   58          | "jkey"
   59          | "kkey"
   60          | "lkey"
   61          | "wkey"
   62          | "zkey"

   63 if_block: statement_block_creator statement end_of_statement_block
   64         | statement_block

   65 statement_block: "{" statement_block_creator statement_list "}" end_of_statement_block

   66 statement_block_creator: ε

   67 end_of_statement_block: ε

   68 statement_list: statement_list statement
   69               | empty

   70 statement: if_statement
   71          | for_statement
   72          | assign_statement ";"
   73          | print_statement ";"
   74          | exit_statement ";"

   75 if_statement: "if" "(" expression ")" if_block
   76             | "if" "(" expression ")" if_block "else" if_block

   77 for_statement: "for" "(" statement_block_creator assign_statement_or_empty end_of_statement_block ";" expression ";" statement_block_creator assign_statement_or_empty end_of_statement_block ")" statement_block

   78 print_statement: "print" "(" expression ")"

   79 exit_statement: "exit" "(" expression ")"

   80 assign_statement_or_empty: assign_statement
   81                          | empty

   82 assign_statement: variable "=" expression
   83                 | variable "+=" expression
   84                 | variable "-=" expression
   85                 | variable "++"
   86                 | variable "--"

   87 variable: "identifier"
   88         | "identifier" "[" expression "]"
   89         | "identifier" "." "identifier"
   90         | "identifier" "[" expression "]" "." "identifier"

   91 expression: primary_expression
   92           | expression "||" expression
   93           | expression "&&" expression
   94           | expression "<=" expression
   95           | expression ">=" expression
   96           | expression "<" expression
   97           | expression ">" expression
   98           | expression "==" expression
   99           | expression "!=" expression
  100           | expression "+" expression
  101           | expression "-" expression
  102           | expression "*" expression
  103           | expression "/" expression
  104           | expression "%" expression
  105           | "-" expression
  106           | "!" expression
  107           | math_operator "(" expression ")"

  108 primary_expression: "(" expression ")"
  109                   | variable
  110                   | "int constant"
  111                   | "true"
  112                   | "false"
  113                   | "double constant"
  114                   | "string constant"

  115 math_operator: "sin"
  116              | "cos"
  117              | "tan"
  118              | "asin"
  119              | "acos"
  120              | "atan"
  121              | "sqrt"
  122              | "floor"
  123              | "abs"
  124              | "random"

  125 empty: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "int" (258) 8
    "double" (259) 9
    "string" (260) 10
    "triangle" (261) 16
    "pixmap" (262) 17
    "circle" (263) 18
    "rectangle" (264) 19
    "textbox" (265) 20
    "forward" <union_int> (266) 26
    "initialization" (267) 33
    "termination" (268) 34
    "true" (269) 111
    "false" (270) 112
    "on" <union_int> (271) 38
    "space" (272) 39
    "leftarrow" (273) 40
    "rightarrow" (274) 41
    "uparrow" (275) 42
    "downarrow" (276) 43
    "leftmouse_down" (277) 44
    "middlemouse_down" (278) 45
    "rightmouse_down" (279) 46
    "leftmouse_up" (280) 47
    "middlemouse_up" (281) 48
    "rightmouse_up" (282) 49
    "mouse_move" (283) 50
    "mouse_drag" (284) 51
    "f1" (285) 52
    "akey" (286) 53
    "skey" (287) 54
    "dkey" (288) 55
    "fkey" (289) 56
    "hkey" (290) 57
    "jkey" (291) 58
    "kkey" (292) 59
    "lkey" (293) 60
    "wkey" (294) 61
    "zkey" (295) 62
    "touches" (296)
    "near" (297)
    "animation" (298) 26 35
    "if" (299) 75 76
    "for" (300) 77
    "else" (301) 76
    "print" <union_int> (302) 78
    "exit" <union_int> (303) 79
    "(" (304) 14 26 35 75 76 77 78 79 107 108
    ")" (305) 14 26 35 75 76 77 78 79 107 108
    "{" (306) 35 65
    "}" (307) 35 65
    "[" (308) 5 15 88 90
    "]" (309) 5 15 88 90
    ";" (310) 2 72 73 74 77
    "," (311) 23
    "." (312) 89 90
    "=" (313) 11 25 82
    "+=" (314) 83
    "-=" (315) 84
    "++" (316) 85
    "--" (317) 86
    "*" (318) 102
    "/" (319) 103
    "%" (320) 104
    "+" (321) 100
    "-" (322) 101 105
    "sin" (323) 115
    "cos" (324) 116
    "tan" (325) 117
    "asin" (326) 118
    "acos" (327) 119
    "atan" (328) 120
    "sqrt" (329) 121
    "floor" (330) 122
    "abs" (331) 123
    "random" (332) 124
    "<" (333) 96
    ">" (334) 97
    "<=" (335) 94
    ">=" (336) 95
    "==" (337) 98
    "!=" (338) 99
    "&&" (339) 93
    "||" (340) 92
    "!" (341) 106
    "identifier" <union_string> (342) 4 5 14 15 25 26 35 36 37 87 88 89 90
    "int constant" <union_int> (343) 110
    "double constant" <union_double> (344) 113
    "string constant" <union_string> (345) 114
    "error" (346)
    IF_NO_ELSE (347)
    UNARY_OPS (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    program (95)
        on left: 1
        on right: 0
    declaration_list (96)
        on left: 2 3
        on right: 1 2
    declaration (97)
        on left: 4 5 6 7
        on right: 2
    simple_type <simple_type> (98)
        on left: 8 9 10
        on right: 4 5
    optional_initializer <union_expression> (99)
        on left: 11 12
        on right: 4
    object_declaration (100)
        on left: 14 15
        on right: 6
    $@1 (101)
        on left: 13
        on right: 14
    object_type <gpl_type> (102)
        on left: 16 17 18 19 20
        on right: 14 15 36 37
    parameter_list_or_empty (103)
        on left: 21 22
        on right: 14
    parameter_list (104)
        on left: 23 24
        on right: 21 23
    parameter (105)
        on left: 25
        on right: 23 24
    forward_declaration (106)
        on left: 26
        on right: 7
    block_list (107)
        on left: 27 28
        on right: 1 27
    block (108)
        on left: 29 30 31 32
        on right: 27
    initialization_block (109)
        on left: 33
        on right: 29
    termination_block (110)
        on left: 34
        on right: 30
    animation_block (111)
        on left: 35
        on right: 31
    animation_parameter <symbol> (112)
        on left: 36
        on right: 26
    check_animation_parameter (113)
        on left: 37
        on right: 35
    on_block (114)
        on left: 38
        on right: 32
    keystroke <keystroke> (115)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 38
    if_block <statement_block> (116)
        on left: 63 64
        on right: 75 76
    statement_block <statement_block> (117)
        on left: 65
        on right: 33 34 38 64 77
    statement_block_creator <statement_block> (118)
        on left: 66
        on right: 63 65 77
    end_of_statement_block <statement_block> (119)
        on left: 67
        on right: 35 63 65 77
    statement_list (120)
        on left: 68 69
        on right: 35 65 68
    statement (121)
        on left: 70 71 72 73 74
        on right: 63 68
    if_statement (122)
        on left: 75 76
        on right: 70
    for_statement (123)
        on left: 77
        on right: 71
    print_statement (124)
        on left: 78
        on right: 73
    exit_statement (125)
        on left: 79
        on right: 74
    assign_statement_or_empty (126)
        on left: 80 81
        on right: 77
    assign_statement (127)
        on left: 82 83 84 85 86
        on right: 72 80
    variable <union_variable> (128)
        on left: 87 88 89 90
        on right: 82 83 84 85 86 109
    expression <union_expression> (129)
        on left: 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
        on right: 5 11 15 25 75 76 77 78 79 82 83 84 88 90 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
    primary_expression <union_expression> (130)
        on left: 108 109 110 111 112 113 114
        on right: 91
    math_operator <math_operator_type> (131)
        on left: 115 116 117 118 119 120 121 122 123 124
        on right: 107
    empty (132)
        on left: 125
        on right: 3 12 22 28 69 81


State 0

    0 $accept: • program $end

    $default  reduce using rule 125 (empty)

    program           go to state 1
    declaration_list  go to state 2
    empty             go to state 3


State 1

    0 $accept: program • $end

    $end  shift, and go to state 4


State 2

    1 program: declaration_list • block_list
    2 declaration_list: declaration_list • declaration ";"

    "int"        shift, and go to state 5
    "double"     shift, and go to state 6
    "string"     shift, and go to state 7
    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12
    "forward"    shift, and go to state 13

    $default  reduce using rule 125 (empty)

    declaration          go to state 14
    simple_type          go to state 15
    object_declaration   go to state 16
    object_type          go to state 17
    forward_declaration  go to state 18
    block_list           go to state 19
    empty                go to state 20


State 3

    3 declaration_list: empty •

    $default  reduce using rule 3 (declaration_list)


State 4

    0 $accept: program $end •

    $default  accept


State 5

    8 simple_type: "int" •

    $default  reduce using rule 8 (simple_type)


State 6

    9 simple_type: "double" •

    $default  reduce using rule 9 (simple_type)


State 7

   10 simple_type: "string" •

    $default  reduce using rule 10 (simple_type)


State 8

   16 object_type: "triangle" •

    $default  reduce using rule 16 (object_type)


State 9

   17 object_type: "pixmap" •

    $default  reduce using rule 17 (object_type)


State 10

   18 object_type: "circle" •

    $default  reduce using rule 18 (object_type)


State 11

   19 object_type: "rectangle" •

    $default  reduce using rule 19 (object_type)


State 12

   20 object_type: "textbox" •

    $default  reduce using rule 20 (object_type)


State 13

   26 forward_declaration: "forward" • "animation" "identifier" "(" animation_parameter ")"

    "animation"  shift, and go to state 21


State 14

    2 declaration_list: declaration_list declaration • ";"

    ";"  shift, and go to state 22


State 15

    4 declaration: simple_type • "identifier" optional_initializer
    5            | simple_type • "identifier" "[" expression "]"

    "identifier"  shift, and go to state 23


State 16

    6 declaration: object_declaration •

    $default  reduce using rule 6 (declaration)


State 17

   14 object_declaration: object_type • "identifier" $@1 "(" parameter_list_or_empty ")"
   15                   | object_type • "identifier" "[" expression "]"

    "identifier"  shift, and go to state 24


State 18

    7 declaration: forward_declaration •

    $default  reduce using rule 7 (declaration)


State 19

    1 program: declaration_list block_list •
   27 block_list: block_list • block

    "initialization"  shift, and go to state 25
    "termination"     shift, and go to state 26
    "on"              shift, and go to state 27
    "animation"       shift, and go to state 28

    $default  reduce using rule 1 (program)

    block                 go to state 29
    initialization_block  go to state 30
    termination_block     go to state 31
    animation_block       go to state 32
    on_block              go to state 33


State 20

   28 block_list: empty •

    $default  reduce using rule 28 (block_list)


State 21

   26 forward_declaration: "forward" "animation" • "identifier" "(" animation_parameter ")"

    "identifier"  shift, and go to state 34


State 22

    2 declaration_list: declaration_list declaration ";" •

    $default  reduce using rule 2 (declaration_list)


State 23

    4 declaration: simple_type "identifier" • optional_initializer
    5            | simple_type "identifier" • "[" expression "]"

    "["  shift, and go to state 35
    "="  shift, and go to state 36

    $default  reduce using rule 125 (empty)

    optional_initializer  go to state 37
    empty                 go to state 38


State 24

   14 object_declaration: object_type "identifier" • $@1 "(" parameter_list_or_empty ")"
   15                   | object_type "identifier" • "[" expression "]"

    "["  shift, and go to state 39

    $default  reduce using rule 13 ($@1)

    $@1  go to state 40


State 25

   33 initialization_block: "initialization" • statement_block

    "{"  shift, and go to state 41

    statement_block  go to state 42


State 26

   34 termination_block: "termination" • statement_block

    "{"  shift, and go to state 41

    statement_block  go to state 43


State 27

   38 on_block: "on" • keystroke statement_block

    "space"             shift, and go to state 44
    "leftarrow"         shift, and go to state 45
    "rightarrow"        shift, and go to state 46
    "uparrow"           shift, and go to state 47
    "downarrow"         shift, and go to state 48
    "leftmouse_down"    shift, and go to state 49
    "middlemouse_down"  shift, and go to state 50
    "rightmouse_down"   shift, and go to state 51
    "leftmouse_up"      shift, and go to state 52
    "middlemouse_up"    shift, and go to state 53
    "rightmouse_up"     shift, and go to state 54
    "mouse_move"        shift, and go to state 55
    "mouse_drag"        shift, and go to state 56
    "f1"                shift, and go to state 57
    "akey"              shift, and go to state 58
    "skey"              shift, and go to state 59
    "dkey"              shift, and go to state 60
    "fkey"              shift, and go to state 61
    "hkey"              shift, and go to state 62
    "jkey"              shift, and go to state 63
    "kkey"              shift, and go to state 64
    "lkey"              shift, and go to state 65
    "wkey"              shift, and go to state 66
    "zkey"              shift, and go to state 67

    keystroke  go to state 68


State 28

   35 animation_block: "animation" • "identifier" "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "identifier"  shift, and go to state 69


State 29

   27 block_list: block_list block •

    $default  reduce using rule 27 (block_list)


State 30

   29 block: initialization_block •

    $default  reduce using rule 29 (block)


State 31

   30 block: termination_block •

    $default  reduce using rule 30 (block)


State 32

   31 block: animation_block •

    $default  reduce using rule 31 (block)


State 33

   32 block: on_block •

    $default  reduce using rule 32 (block)


State 34

   26 forward_declaration: "forward" "animation" "identifier" • "(" animation_parameter ")"

    "("  shift, and go to state 70


State 35

    5 declaration: simple_type "identifier" "[" • expression "]"

    "true"             shift, and go to state 71
    "false"            shift, and go to state 72
    "("                shift, and go to state 73
    "-"                shift, and go to state 74
    "sin"              shift, and go to state 75
    "cos"              shift, and go to state 76
    "tan"              shift, and go to state 77
    "asin"             shift, and go to state 78
    "acos"             shift, and go to state 79
    "atan"             shift, and go to state 80
    "sqrt"             shift, and go to state 81
    "floor"            shift, and go to state 82
    "abs"              shift, and go to state 83
    "random"           shift, and go to state 84
    "!"                shift, and go to state 85
    "identifier"       shift, and go to state 86
    "int constant"     shift, and go to state 87
    "double constant"  shift, and go to state 88
    "string constant"  shift, and go to state 89

    variable            go to state 90
    expression          go to state 91
    primary_expression  go to state 92
    math_operator       go to state 93


State 36

   11 optional_initializer: "=" • expression

    "true"             shift, and go to state 71
    "false"            shift, and go to state 72
    "("                shift, and go to state 73
    "-"                shift, and go to state 74
    "sin"              shift, and go to state 75
    "cos"              shift, and go to state 76
    "tan"              shift, and go to state 77
    "asin"             shift, and go to state 78
    "acos"             shift, and go to state 79
    "atan"             shift, and go to state 80
    "sqrt"             shift, and go to state 81
    "floor"            shift, and go to state 82
    "abs"              shift, and go to state 83
    "random"           shift, and go to state 84
    "!"                shift, and go to state 85
    "identifier"       shift, and go to state 86
    "int constant"     shift, and go to state 87
    "double constant"  shift, and go to state 88
    "string constant"  shift, and go to state 89

    variable            go to state 90
    expression          go to state 94
    primary_expression  go to state 92
    math_operator       go to state 93


State 37

    4 declaration: simple_type "identifier" optional_initializer •

    $default  reduce using rule 4 (declaration)


State 38

   12 optional_initializer: empty •

    $default  reduce using rule 12 (optional_initializer)


State 39

   15 object_declaration: object_type "identifier" "[" • expression "]"

    "true"             shift, and go to state 71
    "false"            shift, and go to state 72
    "("                shift, and go to state 73
    "-"                shift, and go to state 74
    "sin"              shift, and go to state 75
    "cos"              shift, and go to state 76
    "tan"              shift, and go to state 77
    "asin"             shift, and go to state 78
    "acos"             shift, and go to state 79
    "atan"             shift, and go to state 80
    "sqrt"             shift, and go to state 81
    "floor"            shift, and go to state 82
    "abs"              shift, and go to state 83
    "random"           shift, and go to state 84
    "!"                shift, and go to state 85
    "identifier"       shift, and go to state 86
    "int constant"     shift, and go to state 87
    "double constant"  shift, and go to state 88
    "string constant"  shift, and go to state 89

    variable            go to state 90
    expression          go to state 95
    primary_expression  go to state 92
    math_operator       go to state 93


State 40

   14 object_declaration: object_type "identifier" $@1 • "(" parameter_list_or_empty ")"

    "("  shift, and go to state 96


State 41

   65 statement_block: "{" • statement_block_creator statement_list "}" end_of_statement_block

    $default  reduce using rule 66 (statement_block_creator)

    statement_block_creator  go to state 97


State 42

   33 initialization_block: "initialization" statement_block •

    $default  reduce using rule 33 (initialization_block)


State 43

   34 termination_block: "termination" statement_block •

    $default  reduce using rule 34 (termination_block)


State 44

   39 keystroke: "space" •

    $default  reduce using rule 39 (keystroke)


State 45

   40 keystroke: "leftarrow" •

    $default  reduce using rule 40 (keystroke)


State 46

   41 keystroke: "rightarrow" •

    $default  reduce using rule 41 (keystroke)


State 47

   42 keystroke: "uparrow" •

    $default  reduce using rule 42 (keystroke)


State 48

   43 keystroke: "downarrow" •

    $default  reduce using rule 43 (keystroke)


State 49

   44 keystroke: "leftmouse_down" •

    $default  reduce using rule 44 (keystroke)


State 50

   45 keystroke: "middlemouse_down" •

    $default  reduce using rule 45 (keystroke)


State 51

   46 keystroke: "rightmouse_down" •

    $default  reduce using rule 46 (keystroke)


State 52

   47 keystroke: "leftmouse_up" •

    $default  reduce using rule 47 (keystroke)


State 53

   48 keystroke: "middlemouse_up" •

    $default  reduce using rule 48 (keystroke)


State 54

   49 keystroke: "rightmouse_up" •

    $default  reduce using rule 49 (keystroke)


State 55

   50 keystroke: "mouse_move" •

    $default  reduce using rule 50 (keystroke)


State 56

   51 keystroke: "mouse_drag" •

    $default  reduce using rule 51 (keystroke)


State 57

   52 keystroke: "f1" •

    $default  reduce using rule 52 (keystroke)


State 58

   53 keystroke: "akey" •

    $default  reduce using rule 53 (keystroke)


State 59

   54 keystroke: "skey" •

    $default  reduce using rule 54 (keystroke)


State 60

   55 keystroke: "dkey" •

    $default  reduce using rule 55 (keystroke)


State 61

   56 keystroke: "fkey" •

    $default  reduce using rule 56 (keystroke)


State 62

   57 keystroke: "hkey" •

    $default  reduce using rule 57 (keystroke)


State 63

   58 keystroke: "jkey" •

    $default  reduce using rule 58 (keystroke)


State 64

   59 keystroke: "kkey" •

    $default  reduce using rule 59 (keystroke)


State 65

   60 keystroke: "lkey" •

    $default  reduce using rule 60 (keystroke)


State 66

   61 keystroke: "wkey" •

    $default  reduce using rule 61 (keystroke)


State 67

   62 keystroke: "zkey" •

    $default  reduce using rule 62 (keystroke)


State 68

   38 on_block: "on" keystroke • statement_block

    "{"  shift, and go to state 41

    statement_block  go to state 98


State 69

   35 animation_block: "animation" "identifier" • "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "("  shift, and go to state 99


State 70

   26 forward_declaration: "forward" "animation" "identifier" "(" • animation_parameter ")"

    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12

    object_type          go to state 100
    animation_parameter  go to state 101


State 71

  111 primary_expression: "true" •

    $default  reduce using rule 111 (primary_expression)


State 72

  112 primary_expression: "false" •

    $default  reduce using rule 112 (primary_expression)


State 73

  108 primary_expression: "(" • expression ")"

    "true"             shift, and go to state 71
    "false"            shift, and go to state 72
    "("                shift, and go to state 73
    "-"                shift, and go to state 74
    "sin"              shift, and go to state 75
    "cos"              shift, and go to state 76
    "tan"              shift, and go to state 77
    "asin"             shift, and go to state 78
    "acos"             shift, and go to state 79
    "atan"             shift, and go to state 80
    "sqrt"             shift, and go to state 81
    "floor"            shift, and go to state 82
    "abs"              shift, and go to state 83
    "random"           shift, and go to state 84
    "!"                shift, and go to state 85
    "identifier"       shift, and go to state 86
    "int constant"     shift, and go to state 87
    "double constant"  shift, and go to state 88
    "string constant"  shift, and go to state 89

    variable            go to state 90
    expression          go to state 102
    primary_expression  go to state 92
    math_operator       go to state 93


State 74

  105 expression: "-" • expression

    "true"             shift, and go to state 71
    "false"            shift, and go to state 72
    "("                shift, and go to state 73
    "-"                shift, and go to state 74
    "sin"              shift, and go to state 75
    "cos"              shift, and go to state 76
    "tan"              shift, and go to state 77
    "asin"             shift, and go to state 78
    "acos"             shift, and go to state 79
    "atan"             shift, and go to state 80
    "sqrt"             shift, and go to state 81
    "floor"            shift, and go to state 82
    "abs"              shift, and go to state 83
    "random"           shift, and go to state 84
    "!"                shift, and go to state 85
    "identifier"       shift, and go to state 86
    "int constant"     shift, and go to state 87
    "double constant"  shift, and go to state 88
    "string constant"  shift, and go to state 89

    variable            go to state 90
    expression          go to state 103
    primary_expression  go to state 92
    math_operator       go to state 93


State 75

  115 math_operator: "sin" •

    $default  reduce using rule 115 (math_operator)


State 76

  116 math_operator: "cos" •

    $default  reduce using rule 116 (math_operator)


State 77

  117 math_operator: "tan" •

    $default  reduce using rule 117 (math_operator)


State 78

  118 math_operator: "asin" •

    $default  reduce using rule 118 (math_operator)


State 79

  119 math_operator: "acos" •

    $default  reduce using rule 119 (math_operator)


State 80

  120 math_operator: "atan" •

    $default  reduce using rule 120 (math_operator)


State 81

  121 math_operator: "sqrt" •

    $default  reduce using rule 121 (math_operator)


State 82

  122 math_operator: "floor" •

    $default  reduce using rule 122 (math_operator)


State 83

  123 math_operator: "abs" •

    $default  reduce using rule 123 (math_operator)


State 84

  124 math_operator: "random" •

    $default  reduce using rule 124 (math_operator)


State 85

  106 expression: "!" • expression

    "true"             shift, and go to state 71
    "false"            shift, and go to state 72
    "("                shift, and go to state 73
    "-"                shift, and go to state 74
    "sin"              shift, and go to state 75
    "cos"              shift, and go to state 76
    "tan"              shift, and go to state 77
    "asin"             shift, and go to state 78
    "acos"             shift, and go to state 79
    "atan"             shift, and go to state 80
    "sqrt"             shift, and go to state 81
    "floor"            shift, and go to state 82
    "abs"              shift, and go to state 83
    "random"           shift, and go to state 84
    "!"                shift, and go to state 85
    "identifier"       shift, and go to state 86
    "int constant"     shift, and go to state 87
    "double constant"  shift, and go to state 88
    "string constant"  shift, and go to state 89

    variable            go to state 90
    expression          go to state 104
    primary_expression  go to state 92
    math_operator       go to state 93


State 86

   87 variable: "identifier" •
   88         | "identifier" • "[" expression "]"
   89         | "identifier" • "." "identifier"
   90         | "identifier" • "[" expression "]" "." "identifier"

    "["  shift, and go to state 105
    "."  shift, and go to state 106

    $default  reduce using rule 87 (variable)


State 87

  110 primary_expression: "int constant" •

    $default  reduce using rule 110 (primary_expression)


State 88

  113 primary_expression: "double constant" •

    $default  reduce using rule 113 (primary_expression)


State 89

  114 primary_expression: "string constant" •

    $default  reduce using rule 114 (primary_expression)


State 90

  109 primary_expression: variable •

    $default  reduce using rule 109 (primary_expression)


State 91

    5 declaration: simple_type "identifier" "[" expression • "]"
   92 expression: expression • "||" expression
   93           | expression • "&&" expression
   94           | expression • "<=" expression
   95           | expression • ">=" expression
   96           | expression • "<" expression
   97           | expression • ">" expression
   98           | expression • "==" expression
   99           | expression • "!=" expression
  100           | expression • "+" expression
  101           | expression • "-" expression
  102           | expression • "*" expression
  103           | expression • "/" expression
  104           | expression • "%" expression

    "]"   shift, and go to state 107
    "*"   shift, and go to state 108
    "/"   shift, and go to state 109
    "%"   shift, and go to state 110
    "+"   shift, and go to state 111
    "-"   shift, and go to state 112
    "<"   shift, and go to state 113
    ">"   shift, and go to state 114
    "<="  shift, and go to state 115
    ">="  shift, and go to state 116
    "=="  shift, and go to state 117
    "!="  shift, and go to state 118
    "&&"  shift, and go to state 119
    "||"  shift, and go to state 120


State 92

   91 expression: primary_expression •

    $default  reduce using rule 91 (expression)


State 93

  107 expression: math_operator • "(" expression ")"

    "("  shift, and go to state 121


State 94

   11 optional_initializer: "=" expression •
   92 expression: expression • "||" expression
   93           | expression • "&&" expression
   94           | expression • "<=" expression
   95           | expression • ">=" expression
   96           | expression • "<" expression
   97           | expression • ">" expression
   98           | expression • "==" expression
   99           | expression • "!=" expression
  100           | expression • "+" expression
  101           | expression • "-" expression
  102           | expression • "*" expression
  103           | expression • "/" expression
  104           | expression • "%" expression

    "*"   shift, and go to state 108
    "/"   shift, and go to state 109
    "%"   shift, and go to state 110
    "+"   shift, and go to state 111
    "-"   shift, and go to state 112
    "<"   shift, and go to state 113
    ">"   shift, and go to state 114
    "<="  shift, and go to state 115
    ">="  shift, and go to state 116
    "=="  shift, and go to state 117
    "!="  shift, and go to state 118
    "&&"  shift, and go to state 119
    "||"  shift, and go to state 120

    $default  reduce using rule 11 (optional_initializer)


State 95

   15 object_declaration: object_type "identifier" "[" expression • "]"
   92 expression: expression • "||" expression
   93           | expression • "&&" expression
   94           | expression • "<=" expression
   95           | expression • ">=" expression
   96           | expression • "<" expression
   97           | expression • ">" expression
   98           | expression • "==" expression
   99           | expression • "!=" expression
  100           | expression • "+" expression
  101           | expression • "-" expression
  102           | expression • "*" expression
  103           | expression • "/" expression
  104           | expression • "%" expression

    "]"   shift, and go to state 122
    "*"   shift, and go to state 108
    "/"   shift, and go to state 109
    "%"   shift, and go to state 110
    "+"   shift, and go to state 111
    "-"   shift, and go to state 112
    "<"   shift, and go to state 113
    ">"   shift, and go to state 114
    "<="  shift, and go to state 115
    ">="  shift, and go to state 116
    "=="  shift, and go to state 117
    "!="  shift, and go to state 118
    "&&"  shift, and go to state 119
    "||"  shift, and go to state 120


State 96

   14 object_declaration: object_type "identifier" $@1 "(" • parameter_list_or_empty ")"

    "identifier"  shift, and go to state 123

    $default  reduce using rule 125 (empty)

    parameter_list_or_empty  go to state 124
    parameter_list           go to state 125
    parameter                go to state 126
    empty                    go to state 127


State 97

   65 statement_block: "{" statement_block_creator • statement_list "}" end_of_statement_block

    $default  reduce using rule 125 (empty)

    statement_list  go to state 128
    empty           go to state 129


State 98

   38 on_block: "on" keystroke statement_block •

    $default  reduce using rule 38 (on_block)


State 99

   35 animation_block: "animation" "identifier" "(" • check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12

    object_type                go to state 130
    check_animation_parameter  go to state 131


State 100

   36 animation_parameter: object_type • "identifier"

    "identifier"  shift, and go to state 132


State 101

   26 forward_declaration: "forward" "animation" "identifier" "(" animation_parameter • ")"

    ")"  shift, and go to state 133


State 102

   92 expression: expression • "||" expression
   93           | expression • "&&" expression
   94           | expression • "<=" expression
   95           | expression • ">=" expression
   96           | expression • "<" expression
   97           | expression • ">" expression
   98           | expression • "==" expression
   99           | expression • "!=" expression
  100           | expression • "+" expression
  101           | expression • "-" expression
  102           | expression • "*" expression
  103           | expression • "/" expression
  104           | expression • "%" expression
  108 primary_expression: "(" expression • ")"

    ")"   shift, and go to state 134
    "*"   shift, and go to state 108
    "/"   shift, and go to state 109
    "%"   shift, and go to state 110
    "+"   shift, and go to state 111
    "-"   shift, and go to state 112
    "<"   shift, and go to state 113
    ">"   shift, and go to state 114
    "<="  shift, and go to state 115
    ">="  shift, and go to state 116
    "=="  shift, and go to state 117
    "!="  shift, and go to state 118
    "&&"  shift, and go to state 119
    "||"  shift, and go to state 120


State 103

   92 expression: expression • "||" expression
   93           | expression • "&&" expression
   94           | expression • "<=" expression
   95           | expression • ">=" expression
   96           | expression • "<" expression
   97           | expression • ">" expression
   98           | expression • "==" expression
   99           | expression • "!=" expression
  100           | expression • "+" expression
  101           | expression • "-" expression
  102           | expression • "*" expression
  103           | expression • "/" expression
  104           | expression • "%" expression
  105           | "-" expression •

    $default  reduce using rule 105 (expression)


State 104

   92 expression: expression • "||" expression
   93           | expression • "&&" expression
   94           | expression • "<=" expression
   95           | expression • ">=" expression
   96           | expression • "<" expression
   97           | expression • ">" expression
   98           | expression • "==" expression
   99           | expression • "!=" expression
  100           | expression • "+" expression
  101           | expression • "-" expression
  102           | expression • "*" expression
  103           | expression • "/" expression
  104           | expression • "%" expression
  106           | "!" expression •

    $default  reduce using rule 106 (expression)


State 105

   88 variable: "identifier" "[" • expression "]"
   90         | "identifier" "[" • expression "]" "." "identifier"

    "true"             shift, and go to state 71
    "false"            shift, and go to state 72
    "("                shift, and go to state 73
    "-"                shift, and go to state 74
    "sin"              shift, and go to state 75
    "cos"              shift, and go to state 76
    "tan"              shift, and go to state 77
    "asin"             shift, and go to state 78
    "acos"             shift, and go to state 79
    "atan"             shift, and go to state 80
    "sqrt"             shift, and go to state 81
    "floor"            shift, and go to state 82
    "abs"              shift, and go to state 83
    "random"           shift, and go to state 84
    "!"                shift, and go to state 85
    "identifier"       shift, and go to state 86
    "int constant"     shift, and go to state 87
    "double constant"  shift, and go to state 88
    "string constant"  shift, and go to state 89

    variable            go to state 90
    expression          go to state 135
    primary_expression  go to state 92
    math_operator       go to state 93


State 106

   89 variable: "identifier" "." • "identifier"

    "identifier"  shift, and go to state 136


State 107

    5 declaration: simple_type "identifier" "[" expression "]" •

    $default  reduce using rule 5 (declaration)


State 108

  102 expression: expression "*" • expression

    "true"             shift, and go to state 71
    "false"            shift, and go to state 72
    "("                shift, and go to state 73
    "-"                shift, and go to state 74
    "sin"              shift, and go to state 75
    "cos"              shift, and go to state 76
    "tan"              shift, and go to state 77
    "asin"             shift, and go to state 78
    "acos"             shift, and go to state 79
    "atan"             shift, and go to state 80
    "sqrt"             shift, and go to state 81
    "floor"            shift, and go to state 82
    "abs"              shift, and go to state 83
    "random"           shift, and go to state 84
    "!"                shift, and go to state 85
    "identifier"       shift, and go to state 86
    "int constant"     shift, and go to state 87
    "double constant"  shift, and go to state 88
    "string constant"  shift, and go to state 89

    variable            go to state 90
    expression          go to state 137
    primary_expression  go to state 92
    math_operator       go to state 93


State 109

  103 expression: expression "/" • expression
